<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    android:paddingLeft="2dp"
    android:paddingTop="5dp" >

    <TextView
        android:id="@+id/textViewSearchOptions"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:text="@string/search_options"
        android:textColor="#ffffff"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewAppereanceOptions"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:clickable="true"
            android:paddingLeft="2dp"
            android:paddingTop="4dp"
            android:text="@string/appereance_options"
            android:textColor="#ffffff"
            android:textSize="30sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewAboutDictionary"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:paddingLeft="2dp"
        android:paddingTop="10dp"
        android:text="@string/action_about"
        android:textColor="#ffffff"
        android:textSize="30sp" />

</LinearLayout>